<resources>
    <string name="app_name">GoodFood</string>
    <string name="Start_Now">Start Now</string>
    <string name="Log_In">Log In</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="slogan">Good Food, Great Mood!</string>
    <string name="Welcome">Welcome!</string>
    <string name="LoginHint">Please provide your email and password fully and correctly!</string>
    <string name="YourEmail">Your Email</string>
    <string name="ExampleEmail">example123@gmail.com</string>
    <string name="YourPassword">Your Password</string>
    <string name="ForgetPass">Forget Password</string>
    <string name="OrSignUpWith">or sign up with</string>
    <string name="DoNotHaveAccount">Don\'t have any account?</string>
    <string name="New_Account">New Account</string>
    <string name="Full_Name">Your Full Name</string>
    <string name="ExampleName">Good Food</string>
    <string name="ExamplePhone">0123456789</string>
    <string name="ExampleDateTime">01/01/2005</string>
    <string name="YourMobilePhone">Your Mobile Phone</string>
    <string name="YourBirthday">Your Birthday</string>
    <string name="Agree1">"By continuing, you agree to "</string>
    <string name="Agree2">Terms of Use</string>
    <string name="Agree3">and</string>
    <string name="Agree4">Privacy Policy</string>
    <string name="HaveAccount">Have you got any account?</string>
    <string name="SearchYourFavouriteFood">Search your favourite food</string>
    <string name="Categories">Categories</string>
    <string name="ExampleCategories">Meal</string>
    <string name="Best_Seller">Best Seller</string>
    <string name="ExamplePrice">$100</string>
    <string name="View_All">View All</string>
    <string name="ErrorInfo">Error Info</string>
    <string name="Notify_Not_Verified_Email">Your email has not been verified yet!\nClick Verify to resent email verification</string>
    <string name="Cancel">Cancel</string>
    <string name="re_verify">Verify</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="buy_now">Buy Now</string>
    <string name="buy_1_get_1">Buy 1 Get 1</string>
    <string name="_14_04_2025">14/04/2025</string>
    <string name="sale_off_10_20">Sale off 10%-20%</string>
</resources>