<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.SignUpActivity"
    android:background="@color/base_yellow"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fontFamily="@font/league_spartan_bold"
        android:gravity="center"
        android:text="@string/New_Account"
        android:textColor="@color/base_orange"
        android:textSize="40sp">

    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/card_white">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/Full_Name"
                    android:textColor="@color/black"
                    android:textSize="20sp">
                </TextView>

                <TextView
                    android:id="@+id/txVw_FullName_Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/ErrorInfo"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/edTx_InputFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:fontFamily="@font/league_spartan_medium"
                android:hint="@string/ExampleName"
                android:inputType="text"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="20sp">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/YourEmail"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp">

                </TextView>

                <TextView
                    android:id="@+id/txVw_Email_Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/ErrorInfo"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/edTx_InputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:fontFamily="@font/league_spartan_medium"
                android:hint="@string/ExampleEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/YourPassword"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp">

                </TextView>

                <TextView
                    android:id="@+id/txVw_Password_Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/ErrorInfo"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout_InputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:orientation="horizontal"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/edTx_InputPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/league_spartan_medium"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="20sp">

                </EditText>

                <ImageView
                    android:id="@+id/imVw_HideShowPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hide">

                </ImageView>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/YourMobilePhone"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp">

                </TextView>

                <TextView
                    android:id="@+id/txVw_MobilePhone_Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/ErrorInfo"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/edTx_InputNumberPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:fontFamily="@font/league_spartan_medium"
                android:hint="@string/ExamplePhone"
                android:inputType="phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp">

            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_medium"
                    android:text="@string/YourBirthday"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:layout_marginTop="5dp">

                </TextView>

                <TextView
                    android:id="@+id/txVw_Birthday_Error"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/ErrorInfo"
                    android:textColor="@color/red"
                    android:textSize="15sp"
                    android:visibility="gone">
                </TextView>

            </LinearLayout>

            <EditText
                android:id="@+id/edTx_InputBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:fontFamily="@font/league_spartan_medium"
                android:hint="@string/ExampleDateTime"
                android:inputType="datetime"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:layout_marginTop="5dp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout_Agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2"
            app:layout_constraintVertical_bias="0.1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/league_spartan"
                android:text="@string/Agree1"
                android:textColor="@color/black"
                android:textSize="15sp">

            </TextView>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/league_spartan_bold"
                    android:text="@string/Agree2"
                    android:textColor="@color/base_orange"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/league_spartan"
                    android:text="@string/Agree3"
                    android:textColor="@color/black"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:fontFamily="@font/league_spartan_bold"
                    android:text="@string/Agree4"
                    android:textColor="@color/base_orange"
                    android:textSize="15sp">

                </TextView>

            </LinearLayout>


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_SignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="60dp"
            android:background="@drawable/button_base_orange"
            android:fontFamily="@font/league_spartan_medium"
            android:text="@string/Sign_Up"

            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout_Agree">

        </androidx.appcompat.widget.AppCompatButton>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_SignUp"
            app:layout_constraintVertical_bias="0.2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/league_spartan"
                android:text="@string/HaveAccount"
                android:textColor="@color/black"
                android:textSize="18sp">

            </TextView>

            <TextView
                android:id="@+id/txVw_Login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/Log_In"
                android:textColor="@color/base_orange"
                android:textSize="18sp">

            </TextView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>