<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.LoginActivity"
    android:background="@color/base_yellow"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/Log_In"
        android:fontFamily="@font/league_spartan_bold"
        android:textSize="40sp"
        android:textColor="@color/base_orange"
        android:gravity="center">
    </TextView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:background="@drawable/card_white">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_bold"

                android:text="@string/Welcome"
                android:textColor="@color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"

                android:text="@string/LoginHint"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"

            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan_medium"
                android:text="@string/YourEmail"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <EditText
                android:id="@+id/edTx_InputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_box_yellow_2"
                android:fontFamily="@font/league_spartan_medium"
                android:hint="@string/ExampleEmail"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/league_spartan_medium"
                android:text="@string/YourPassword"
                android:textColor="@color/black"
                android:textSize="20sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_box_yellow_2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edTx_InputPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="9"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/league_spartan_medium"
                    android:inputType="textPassword"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>

                <ImageView
                    android:id="@+id/imVw_HideShowPassword"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:scaleType="fitCenter"
                    android:src="@drawable/hide"/>
                "
            </LinearLayout>

            <TextView
                android:id="@+id/txVw_ForgetPassword"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/league_spartan_medium"
                android:text="@string/ForgetPass"
                android:textColor="@color/base_orange"
                android:textSize="17sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/txVw_ErrorInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/league_spartan"
            android:text="@string/ErrorInfo"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginHorizontal="60dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_base_orange"
            android:fontFamily="@font/league_spartan_medium"
            android:text="@string/Log_In"

            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        </androidx.appcompat.widget.AppCompatButton>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_Login">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/league_spartan"
                android:text="@string/OrSignUpWith"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imVw_IcFacebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/facebookic"/>

                <ImageView
                    android:id="@+id/imVw_IcGoogle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/googleic"/>

                <ImageView
                    android:id="@+id/imVw_IcFingerPrinted"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:src="@drawable/fingerprintedic"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayout3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/league_spartan"
                android:text="@string/DoNotHaveAccount"
                android:textColor="@color/black"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/txVw_SignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/league_spartan_bold"
                android:text="@string/Sign_Up"
                android:textColor="@color/base_orange"
                android:textSize="18sp"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>